--- a/act_Application/Views/ActAportaciones/Delete.cshtml
+++ b/act_Application/Views/ActAportaciones/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model act_Application.Models.ActAportacione
+﻿@model act_Application.Models.BD.ActAportacione
 
 @{
     ViewData["Title"] = "Eliminar Aportaciones";
@@ -53,4 +53,3 @@
         <a class="btn-return" asp-action="Index">Regresar</a>
     </form>
 </div>
-    
