--- a/act_Application/Views/ActAportaciones/Index.cshtml
+++ b/act_Application/Views/ActAportaciones/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<act_Application.Models.ActAportacione>
+﻿@model IEnumerable<act_Application.Models.BD.ActAportacione>
 
 @{
     ViewData["Title"] = "Aportaciones";
