--- a/act_Application/Views/ActMultas/Index.cshtml
+++ b/act_Application/Views/ActMultas/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<act_Application.Models.ActMulta>
+﻿@model IEnumerable<act_Application.Models.BD.ActMulta>
 
 @{
     ViewData["Title"] = "Multas";
