--- a/act_Application/Views/ActRolUsers/Edit.cshtml
+++ b/act_Application/Views/ActRolUsers/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model act_Application.Models.ActRolUser
+﻿@model act_Application.Models.BD.ActRolUser
 
 @{
     ViewData["Title"] = "Editar Roles de Usuario";
