--- a/act_Application/Views/ActTransacciones/Create.cshtml
+++ b/act_Application/Views/ActTransacciones/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model act_Application.Models.ActTransaccione
+﻿@model act_Application.Models.BD.ActTransaccione
 
 @{
     ViewData["Title"] = "Crear Transacciones";
