--- a/act_Application/Views/ActTransacciones/Index.cshtml
+++ b/act_Application/Views/ActTransacciones/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<act_Application.Models.ActTransaccione>
+﻿@model IEnumerable<act_Application.Models.BD.ActTransaccione>
 
 @{
     ViewData["Title"] = "Transacciones";
