--- a/act_Application/Views/ActUsers/Delete.cshtml
+++ b/act_Application/Views/ActUsers/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model act_Application.Models.ActUser
+﻿@model act_Application.Models.BD.ActUser
 
 @{
     ViewData["Title"] = "Eliminar Usuario";
@@ -37,8 +37,6 @@
                 <td class="titulo">Cedula de su Accionista</td>
                 <td class="texto">@Html.DisplayFor(model => model.IdSocio)</td>
             </tr>
-
-
         </table>
     </div>
     <div class="btn-container">
