--- a/act_Application/Views/ActRolUsers/Index.cshtml
+++ b/act_Application/Views/ActRolUsers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<act_Application.Models.ActRolUser>
+﻿@model IEnumerable<act_Application.Models.BD.ActRolUser>
 
 @{
     ViewData["Title"] = "Rol de Usuarios";
