--- a/act_Application/Views/ActRols/Index.cshtml
+++ b/act_Application/Views/ActRols/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<act_Application.Models.ActRol>
+﻿@model IEnumerable<act_Application.Models.BD.ActRol>
 
 @{
     ViewData["Title"] = "Roles";
