--- a/act_Application/Views/Aportar/Aportar.cshtml
+++ b/act_Application/Views/Aportar/Aportar.cshtml
@@ -1,4 +1,4 @@
-﻿@model act_Application.Models.ActAportacione
+﻿@model act_Application.Models.Sistema.AportarViewModel;
 @{
     ViewData["Title"] = "Aportar";
 }
@@ -12,31 +12,13 @@
 <body>
     <div class="container">
         <h2>Registro de Aportación</h2>
-        <form id="aportacion-form" asp-action="Create">
+
+        <form asp-action="AportarPost" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <!--Contenedor de la Fecha-->
             <div class="form-group">
-                <label asp-for="Valor">Monto:</label>
-                <div class="input-container">
-                    <span class="dollar-sign">$</span>
-                    <input asp-for="Valor" class="input-monto" type="number" id="monto" name="monto" step="0.01" required>
-                </div>
-            </div>
-            <div class="form-group">
-                <label asp-for="Nbanco">Banco:</label>
-                <select id="banco" name="banco" required>
-                    <option value="Banco Pichincha">Banco Pichincha</option>
-                    <option value="Banco Guayaquil">Banco Guayaquil</option>
-                    <option value="Produbanco">Produbanco</option>
-                    <option value="Banco del Austro">Banco del Austro</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Cbancaria">Cuenta:</label>
-                <input class="input-cuenta" type="number" id="cuenta" name="cuenta" min="10000000" max="999999999999" required>
-                <div class="error-message">Rango de números mínimo 8 y máximo 12</div>
-            </div>
-            <div class ="form-group">
-                <label asp-for="FechaAportacion">Fecha de Hoy:</label>
+                <label asp-for="Aportacion.FechaAportacion">Fecha de Hoy:</label>
                 <div class="date">
                     <script>
                         date = new Date().toLocaleDateString();
@@ -45,20 +27,58 @@
                 </div>
             </div>
 
+            <!--Contenedor de Nombre del Banco-->
+            <div class="form-group">
+                <label asp-for="Aportacion.Nbanco">Banco:</label>
+                <select asp-for="Aportacion.Nbanco" id="banco" name="banco" required>
+                    <option value="">Seleccionar un Banco...</option>
+                    @foreach (var item in Model.ItemsNBanco)
+                    {
+                        <option value="@item.Id">@item.Nombre</option>
+                    }
+                </select>
+            </div>
 
+            <!--Contenedor de la Cuenta Bancaria-->
+            <div class="form-group">
+                <label asp-for="Aportacion.Cbancaria">Cuenta:</label>
+                <input asp-for="Aportacion.Cbancaria" class="input-cuenta" type="number" id="cuenta" name="cuenta" min="10000000" max="999999999999" required>
+                <div class="error-message">Rango de números mínimo 8 y máximo 12</div>
+            </div>
 
-            <label asp-for="Razon">Razón:</label>
-            <select id="razon" name="razon" required>
-                <option value="CUOTA">CUOTA</option>
-            </select>
+            <!--Contenedor de la Razon-->
+            <div class="form-group">
+                <label asp-for="Aportacion.Razon">Razón:</label>
+                <select asp-for="Aportacion.Razon" id="razon" name="razon" required>
+                    <option value="">Seleccionar una Razon...</option>
+                    @foreach (var item in Model.ItemsRazon)
+                    {
+                        <option value="@item.Id">@item.Nombre</option>
+                    }
+                </select>
+            </div>
 
-            <label asp-for="CapturaPantalla">Comprobante de Transferencia:</label>
-            <input class="input-file" type="file" id="comprobante" name="comprobante" accept=".jpg, .png" required>
+            <!--Contenedor de Valor-->
+            <div class="form-group">
+                <label asp-for="Aportacion.Valor">Monto:</label>
+                <div class="input-container">
+                    <span class="dollar-sign">$</span>
+                    <input asp-for="Aportacion.Valor" class="input-monto" type="number" id="monto" name="monto" step="0.01" min="0.01" required>
+                </div>
+            </div>
 
+            <!--Contenedor de Captura de Pantalla-->
+            <div class="form-group">
+                <label asp-for="Aportacion.CapturaPantalla">Comprobante de Transferencia:</label>
+                <input asp-for="Aportacion.CapturaPantalla" class="input-file" type="file" id="comprobante" name="comprobante" accept=".jpg, .png" required>
+            </div>
+
+            <!--Contenedor de los Botones-->
             <div class="buttons">
                 <button type="submit" class="save-button">Guardar</button>
                 <button type="button" class="clear-button">Limpiar</button>
             </div>
+
         </form>
     </div>
 </body>
