--- a/act_Application/Views/ActMultas/Edit.cshtml
+++ b/act_Application/Views/ActMultas/Edit.cshtml
@@ -7,11 +7,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/Administracion/estiloEditarCrear.css"/>
+    <link rel="stylesheet" href="/css/Administracion/estiloEditarCrear.css" />
 </head>
 <div class="content-text">
 
-<h1>Editar Multas</h1>
+    <h1>Editar Multas</h1>
     <hr />
     <div class="row">
         <div class="col-md-4">
@@ -57,5 +57,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
