--- a/act_Application/Views/Shared/_Layout.cshtml
+++ b/act_Application/Views/Shared/_Layout.cshtml
@@ -85,7 +85,7 @@
                     @if (User.HasClaim("Rol", "Administrador") || User.HasClaim("Rol", "Socio"))
                     {
                         <li class="nav-link">
-                            <a href="~/Aportar/Aportar">
+                            <a href="~/Aportar/Create">
                                 <i class='bx bx-money icon'></i>
                                 <span class="text nav-text">Aportar</span>
                             </a>
