--- a/act_Application/Views/Shared/_Layout.cshtml
+++ b/act_Application/Views/Shared/_Layout.cshtml
@@ -112,6 +112,15 @@
                             </a>
                         </li>
                     }
+                    @if (User.HasClaim("Rol", "Administrador") || User.HasClaim("Rol", "Referente"))
+                    {
+                        <li class="nav-link">
+                            <a href="~/TablaMultas/Index">
+                                <i class='bx bx-money-withdraw icon'></i>
+                                <span class="text nav-text">Prestamos</span>
+                            </a>
+                        </li>
+                    }
                 </ul>
             </div>
 
