--- a/act_Application/Views/ActTransacciones/Delete.cshtml
+++ b/act_Application/Views/ActTransacciones/Delete.cshtml
@@ -1,15 +1,17 @@
 ﻿@model act_Application.Models.BD.ActTransaccione
 
 @{
-    ViewData["Title"] = "Eliminar Transacciones";
+    ViewData["Title"] = "Delete";
 }
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/Administracion/estiloEliminar.css" />
 </head>
+
+
 <div class="content-text">
-    <h1>Eliminar Transacciones</h1>
+    <h1>Eliminar Registro de Transacciones</h1>
     <hr />
     <div class="container">
         <table>
@@ -21,8 +23,24 @@
                 <td class="titulo">Id del Usuario</td>
                 <td class="texto">@Html.DisplayFor(model => model.IdUser)</td>
             </tr>
+            <tr>
+                <td class="titulo">Valor</td>
+                <td class="texto">@Html.DisplayFor(model => model.Valor)</td>
+            </tr>
+            <tr>
+                <td class="titulo">Estado</td>
+                <td class="texto">@Html.DisplayFor(model => model.Estado)</td>
+            </tr>
+            <tr>
+                <td class="titulo">Fecha de Pago Total del Prestamo</td>
+                <td class="texto">@Html.DisplayFor(model => model.FechPagoTotalPrestamo)</td>
+            </tr>
+            <tr>
+                <td class="titulo">Fecha de Inicio del Prestamo por Cuotas</td>
+                <td class="texto">@Html.DisplayFor(model => model.FechaIniCoutaPrestamo)</td>
+            </tr>
         </table>
-    </div>
+    </div>    
     <div class="btn-container">
         <form asp-action="Delete">
             <input type="hidden" asp-for="Id" />
