Vista de Transacciones y Prestamos Parte 1 (Vista Transacciones)

--- a/act_Application/Views/ActTransacciones/Create.cshtml
+++ b/act_Application/Views/ActTransacciones/Create.cshtml
@@ -27,22 +27,22 @@
                     <span asp-validation-for="IdUser" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Valor" class="control-label">Id del Usuario</label>
+                    <label asp-for="Valor" class="control-label">IValor</label>
                     <input asp-for="Valor" class="form-control" />
                     <span asp-validation-for="Valor" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Estado" class="control-label">Id del Usuario</label>
+                    <label asp-for="Estado" class="control-label">Estado</label>
                     <input asp-for="Estado" class="form-control" />
                     <span asp-validation-for="Estado" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="FechaIniCoutaPrestamo" class="control-label">Id del Usuario</label>
+                    <label asp-for="FechaIniCoutaPrestamo" class="control-label">Fecha de Inicio del Prestamo (CUOTA)</label>
                     <input asp-for="FechaIniCoutaPrestamo" class="form-control" />
                     <span asp-validation-for="FechaIniCoutaPrestamo" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="FechPagoTotalPrestamo" class="control-label">Id del Usuario</label>
+                    <label asp-for="FechPagoTotalPrestamo" class="control-label">Fecha de Pago Total del Prestamo</label>
                     <input asp-for="FechPagoTotalPrestamo" class="form-control" />
                     <span asp-validation-for="FechPagoTotalPrestamo" class="text-danger"></span>
                 </div>
