--- a/act_Application/Views/Shared/_Layout.cshtml
+++ b/act_Application/Views/Shared/_Layout.cshtml
@@ -115,7 +115,7 @@
                     @if (User.HasClaim("Rol", "Administrador") || User.HasClaim("Rol", "Referente"))
                     {
                         <li class="nav-link">
-                            <a href="~/TablaMultas/Index">
+                            <a href="~/Transacciones/Create">
                                 <i class='bx bx-money-withdraw icon'></i>
                                 <span class="text nav-text">Prestamos</span>
                             </a>
